--- a/social-token/package.json
+++ b/social-token/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "express": "^4.18.1",
+    "moralis": "^2.6.0",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
